gitops/apps/ombi/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ombi
  labels:
    app: ombi
    part-of: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
      part-of: ombi
  template:
    metadata:
      labels:
        app: ombi
        part-of: ombi
    spec:
      containers:
        - name: ombi
          resources:
            requests:
              memory: 800Mi
              cpu: 200m
            limits:
              memory: 800Mi
              cpu: 1
          image: ghcr.io/linuxserver/ombi:4.60.16-development
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - "-c"
                  - |
                    cat << EOF > /config/database.json
                    {
                      "OmbiDatabase": {
                        "Type": "Postgres",
                        "ConnectionString": "Server=ombi-postgres-rw;Port=5432;Database=$DATABASE;Username=$DB_USER;Password=$DB_PASSWORD"
                      },
                      "SettingsDatabase": {
                        "Type": "Postgres",
                        "ConnectionString": "Server=ombi-postgres-rw;Port=5432;Database=$DATABASE;Username=$DB_USER;Password=$DB_PASSWORD"
                      },
                      "ExternalDatabase": {
                        "Type": "Postgres",
                        "ConnectionString": "Server=ombi-postgres-rw;Port=5432;Database=$DATABASE;Username=$DB_USER;Password=$DB_PASSWORD"
                      }
                    }
                    EOF
          ports:
            - name: ombi
              containerPort: 3579
          readinessProbe:
            httpGet:
              path: /api/v1/Status
              port: ombi
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/Status
              port: ombi
            initialDelaySeconds: 15
            periodSeconds: 20
