gitops/apps/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  type: ClusterIP
  ports:
    - port: 3579
      targetPort: ombi
  selector:
    app: ombi
    part-of: ombi
---
