gitops/apps/ombi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ombi
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - ombi.bealv.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 80
